# sense-voice-recognizer

./: .clang-format  .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  app.cc  audio.cc  audio.h  config.h  config.yaml  docker-compose.dokploy.yml  docker-compose.yml  middlewares.h  recognizer.cc  recognizer.h  recongizer.cc  recongizer.h  task_manager.cc  task_manager.h
